[UP] use hyprshot for screenshot + update keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -284,17 +284,15 @@ bind = ,XF86AudioPrev, exec, playerctl previous
 bind = ,XF86AudioPlay, exec, playerctl play-pause
 bind = ,XF86AudioStop, exec, playerctl stop
 
-bind = ,Print, exec, $screenshot --now
-bind = CTRL, Print, exec, $screenshot --in5
-bind = SHIFT, Print, exec, $screenshot --in10
-bind = $mainMod, Print, exec, $screenshot --win
-bind = $mainMod CTRL, Print, exec, $screenshot --area
+bind = ,PRINT, exec, hyprshot -m region
+bind = SHIFT, PRINT, exec, hyprshot -m window
+bind = CTRL, PRINT, exec, hyprshot -m output
+
+bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
 
 bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screen-capture.sh
 
 bind = $mainMod SHIFT, T, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
-
-bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
 
 bind = $mainMod, Q, killactive,
 bind = CTRL ALT, Delete, exit,
