[ADD] keybind to switch layout

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -311,6 +311,7 @@ bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod SHIFT, apostrophe, exec, hyprctl keyword general:layout "$(hyprctl getoption general:layout | grep -q 'dwindle' && echo 'master' || echo 'dwindle')" #! @description: "Toggle between dwindle and master layout"; @windows;
 
 bind = $mainMod CTRL, Minus, splitratio, -0.1
 bind = $mainMod CTRL, Equal, splitratio, 0.1
