--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -115,6 +115,8 @@ decoration {
 }
 
 animations {
+    enabled = yes
+
     bezier = easeOutQuint  ,0.23 ,1    ,0.32  ,1
     bezier = easeInOutCubic,0.65 ,0.05 ,0.36  ,1
     bezier = linear        ,0    ,0    ,1     ,1
