[UP] simplify windowrule + do not force dolphin float

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -173,7 +173,9 @@ windowrule = float,class:^Gimp$
 windowrule = float,class:^blueman-manager$
 windowrule = float,class:^org.twosheds.iwgtk$
 windowrule = float,class:^blueberry.py$
-windowrule = float,class:^xdg-desktop-portal-gtk$
+windowrule = float,class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
+windowrule = center, class:^(org.freedesktop.impl.portal.desktop.kde)$
+windowrule = size 1280 720,class:^(org.freedesktop.impl.portal.desktop.kde)$
 
 windowrule = float,class:^org.kde.gwenview$
 windowrule = size 65% 65%,class:^org.kde.gwenview$
@@ -182,11 +184,6 @@ windowrule = float,class:^kitty$ title:^(float-.*)$
 windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
 
 windowrule = workspace 4,class:^Pop$
-
-# File Managers
-windowrule = float,class:^(org.kde.dolphin|thunar|org.freedesktop.impl.portal.desktop.kde)$
-windowrule = center, class:^(org.kde.dolphin|thunar|org.freedesktop.impl.portal.desktop.kde)$
-windowrule = size 1280 720,class:^(org.kde.dolphin|thunar|org.freedesktop.impl.portal.desktop.kde)$
 
 # Gnome Settings
 windowrule = float,class:^(org.gnome.Settings)$
