[UP] missing windowrule simplification

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -204,15 +204,9 @@ windowrule = float,class:^brave-.*-Default$
 # Emacs
 windowrule = workspace 3,class:^(emacs)$
 
-# Teams
-windowrule = workspace 1,class:^(.*Microsoft Teams.*)$
-windowrule = workspace 1,class:^(teams-for-linux)$
-
-# Discord
-windowrule = workspace 1,class:^(discord|WebCord)$
-
-# Slack
-windowrule = workspace 1,class:^(Slack)$
+# Message App
+windowrule = workspace 1,class:^(.*Microsoft Teams.*|teams-for-linux|discord|WebCord|Slack)$
+windowrule = workspace 1,class:^()$
 
 # All
 windowrule = opacity 0.90 override 0.90 override,class:^(.*)$
