--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -8,13 +8,13 @@ general {
 }
 
 listener {
-    timeout = 240                            # in seconds
+    timeout = 180                                           # 3 minutes
     on-timeout = brightnessctl --save; brightnessctl set 5% # command to run when timeout has passed
-    on-resume = brightnessctl --restore  # command to run when activity is detected after timeout has fired.
+    on-resume = brightnessctl --restore                     # command to run when activity is detected after timeout has fired.
 }
 
 listener {
-    timeout = 360                            # in seconds
+    timeout = 300                            # 5 minutes
     on-timeout = ~/.config/hypr/scripts/sleep # command to run when timeout has passed
     on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
 }
