--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -12,8 +12,7 @@ background {
 # GENERAL
 general {
     no_fade_in = false
-    grace = 0
-    disable_loading_bar = false
+    disable_loading_bar = true
 }
 
 # INPUT FIELD
@@ -28,7 +27,7 @@ input-field {
     inner_color = rgba(100, 114, 125, 0.5)
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    font_family = SF Pro Display Bold
+    font_family = CaskaydiaMono Nerd Font
     placeholder_text = <i><span foreground="##ffffff99">Hi, $USER</span></i>
     hide_input = false
     position = 0, -290
@@ -42,7 +41,7 @@ label {
     text = cmd[update:1000] echo -e "$(date +"%H")"
     color = rgba(255, 185, 0, .6)
     font_size = 180
-    font_family = AlfaSlabOne
+    font_family = CaskaydiaMono Nerd Font
     position = 0, 300
     halign = center
     valign = center
@@ -54,7 +53,7 @@ label {
     text = cmd[update:1000] echo -e "$(date +"%M")"
     color = rgba(255, 255, 255, .6)
     font_size = 180
-    font_family = AlfaSlabOne
+    font_family = CaskaydiaMono Nerd Font
     position = 0, 75
     halign = center
     valign = center
