--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,8 +10,7 @@ monitor = desc:LG Electronics LG TV SSCR2 0x01010101, preferred, 1920x0, 1.5
 monitor = desc:Iiyama North America PL2390 11298JH100680, preferred, 1920x0, 1
 monitor = desc:Iiyama North America PL2390 11298JH100788, preferred, -1920x0, 1
 
-monitor = ,1920x1080@60, 1920x0, 1
-# monitor = ,preferred, auto, 1
+monitor = ,preferred, auto, 1
 # monitor = ,preferred, auto, 1, mirror, eDP-1 # Mirror
 workspace = 2, monitor:HDMI-A-1
 
