[UP] decoration values

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,8 +62,8 @@ input {
 source = ~/.cache/wal/colors-hyprland.conf
 
 general {
-    gaps_in = 12
-    gaps_out = 20
+    gaps_in = 5
+    gaps_out = 10
     border_size = 2
     layout = master
     col.active_border = $color4 $color6 45deg
@@ -94,8 +94,8 @@ group {
 }
 
 decoration {
-    rounding = 12         # original 10
-    rounding_power = 4.0  # original 2.0
+    rounding = 0         # original 10
+    # rounding_power = 2.0  # original 2.0
     blur {
         enabled = true
         size = 3 # minimum 1
