[ADD] end active session keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -307,6 +307,12 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod SHIFT, apostrophe, exec, hyprctl keyword general:layout "$(hyprctl getoption general:layout | grep -q 'dwindle' && echo 'master' || echo 'dwindle')" #! @description: "Toggle between dwindle and master layout"; @windows;
 
+bind = $mainMod, ESCAPE, exec, hyprlock
+bind = $mainMod SHIFT, ESCAPE, exec, systemctl suspend
+bind = $mainMod ALT, ESCAPE, exit,
+bind = $mainMod CTRL, ESCAPE, exec, reboot
+bind = $mainMod SHIFT CTRL, ESCAPE, exec, systemctl poweroff
+
 bind = $mainMod CTRL, Minus, splitratio, -0.1
 bind = $mainMod CTRL, Equal, splitratio, 0.1
 
