[FIX] QT_QPA_PLATFORM env var

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -388,7 +388,7 @@ bind = $mainMod SHIFT,  equal,  exec,hyprctl -q keyword cursor:zoom_factor 1
 bind = $mainMod, N, exec, $notificationmenu
 
 env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,"wayland;xcb"
+env = QT_QPA_PLATFORM,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
