[UP] move keybinds to movetoworkspace

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -361,14 +361,14 @@ bind=$mainMod ALT,j,movecurrentworkspacetomonitor,p
 bind=$mainMod ALT,k,movecurrentworkspacetomonitor,u
 bind=$mainMod ALT,l,movecurrentworkspacetomonitor,r
 
-bind = ALT, ampersand, movetoworkspace, 1
-bind = ALT, eacute, movetoworkspace, 2
-bind = ALT, quotedbl, movetoworkspace, 3
-bind = ALT, apostrophe, movetoworkspace, 4
-bind = ALT, parenleft, movetoworkspace, 5
-bind = ALT, minus, movetoworkspace, 6
-bind = ALT, egrave, movetoworkspace, 7
-bind = ALT, underscore, movetoworkspace, 8
+bind = $mainMod SHIFT, ampersand, movetoworkspace, 1
+bind = $mainMod SHIFT, eacute, movetoworkspace, 2
+bind = $mainMod SHIFT, quotedbl, movetoworkspace, 3
+bind = $mainMod SHIFT, apostrophe, movetoworkspace, 4
+bind = $mainMod SHIFT, parenleft, movetoworkspace, 5
+bind = $mainMod SHIFT, minus, movetoworkspace, 6
+bind = $mainMod SHIFT, egrave, movetoworkspace, 7
+bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
