--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -294,8 +294,8 @@ bind = $mainMod, F, fullscreen, 2
 bind = $mainMod CTRL, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 1
 bind = $mainMod, Space, togglefloating,
-bind = $mainMod SHIFT, Space, togglesplit,
-bind = $mainMod, P, pseudo,
+bind = $mainMod SHIFT, Space, togglesplit, # dwindle
+bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, exec, hyprctl dispatch setprop active opaque toggle
 bind = $mainMod CTRL, Space, pin
 bind = $mainMod, G, togglegroup
