[ADD] new show keybind script | omarchy one adapted to rofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -230,7 +230,6 @@ $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
 $notificationmenu = swaync-client -t
 $brightness = ~/.config/hypr/scripts/brightness
-$screenshot = ~/.config/hypr/scripts/screenshot
 $lockscreen = hyprlock
 $sleep = ~/.config/hypr/scripts/sleep
 $suspend = ~/.config/hypr/scripts/suspend
@@ -240,7 +239,7 @@ $files = dolphin
 $editor = emacsclient -c -n -a 'emacs'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = zen
-$help_keybind = ~/.config/rofi/keybinding.sh
+$help_keybind = ~/.config/hypr/scripts/show_keybind
 
 bind = $mainMod, Return, exec, $term
 bind = $mainMod SHIFT, Return, exec, $term2
