[ADD] waybar custom wf-recorder module

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -14,6 +14,7 @@
   ],
   "modules-center": ["clock"],
   "modules-right": [
+    "custom/wf-recorder",
     "mpd",
     "group/info",
     "group/hardware",
