[UP] how opacity is setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -94,6 +94,7 @@ group {
 }
 
 decoration {
+    active_opacity = 0.95
     rounding = 0         # original 10
     # rounding_power = 2.0  # original 2.0
     blur {
@@ -208,7 +209,6 @@ windowrule = workspace 1,class:^(.*Microsoft Teams.*|teams-for-linux|discord|Web
 windowrule = workspace 1,class:^()$
 
 # All
-windowrule = opacity 0.90 override 0.90 override,class:^(.*)$
 windowrule = opaque 1,class:^(.*)$
 windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
 
