[DEL] useless comment

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -142,7 +142,7 @@ animations {
 }
 
 dwindle {
-    pseudotile = true # enable pseudotiling on dwindle
+    pseudotile = true
     preserve_split = true
     smart_split = false
 }
