[UP] enable hdr on monitor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ monitor = eDP-1, 2880x1800@60, 0x0,1.5
 workspace = 1, monitor:eDP-1
 
 monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
-monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5
+monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5, bitdepth, 10, cm, hdr, sdrbrightness, 1.2, sdrsaturation, 0.98
 monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
 monitor = desc:LG Electronics LG TV SSCR2 0x01010101, preferred, 1920x0, 1.5
 
@@ -112,6 +112,10 @@ decoration {
     }
     dim_inactive = true
     dim_strength = 0.05
+}
+
+render {
+    cm_enabled = true # default value
 }
 
 animations {
