--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -289,22 +289,22 @@ bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screen-capture.sh
 
 bind = $mainMod SHIFT, T, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
-bind = $mainMod SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
+bind = $mainMod ALT, SPACE, exec, pkill -SIGUSR1 waybar
 
 bind = $mainMod, Q, killactive,
 bind = CTRL ALT, Delete, exit,
 bind = $mainMod, F, fullscreen, 2
 bind = $mainMod CTRL, F, fullscreen, 0
 bind = $mainMod SHIFT, F, fullscreen, 1
-bind = $mainMod, Space, togglefloating,
-bind = $mainMod SHIFT, Space, togglesplit, # dwindle
+bind = $mainMod, SPACE, togglefloating,
+bind = $mainMod SHIFT, SPACE, togglesplit, # dwindle
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, exec, hyprctl dispatch setprop active opaque toggle
-bind = $mainMod CTRL, Space, pin
+bind = $mainMod CTRL, SPACE, pin
 bind = $mainMod, G, togglegroup
 bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/compactmode.sh
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
-bind = $mainMod SHIFT, apostrophe, exec, hyprctl keyword general:layout "$(hyprctl getoption general:layout | grep -q 'dwindle' && echo 'master' || echo 'dwindle')" #! @description: "Toggle between dwindle and master layout"; @windows;
+bind = $mainMod ALT, apostrophe, exec, hyprctl keyword general:layout "$(hyprctl getoption general:layout | grep -q 'dwindle' && echo 'master' || echo 'dwindle')" #! @description: "Toggle between dwindle and master layout"; @windows;
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
