[UP] input field text + remove comments

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,4 +1,3 @@
-# BACKGROUND
 background {
     monitor =
     path = ~/.cache/hyprpaper/current-wallpaper
@@ -9,13 +8,11 @@ background {
     vibrancy_darkness = 0.0
 }
 
-# GENERAL
 general {
     no_fade_in = false
     disable_loading_bar = true
 }
 
-# INPUT FIELD
 input-field {
     monitor =
     size = 250, 60
@@ -28,7 +25,7 @@ input-field {
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
     font_family = CaskaydiaMono Nerd Font
-    placeholder_text = <i><span foreground="##ffffff99">Hi, $USER</span></i>
+    placeholder_text = <i><span foreground="##ffffff99">Hi, $USER. Enter Password 󰈷</span></i>
     hide_input = false
     position = 0, -290
     halign = center
