[UP] new layerrule for swaync-control-center

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -226,6 +226,7 @@ windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
 layerrule = noanim, selection
 layerrule = noanim, hyprpicker
 layerrule = dimaround, rofi
+layerrule = animation slide, swaync-control-center
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
