--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -249,6 +249,7 @@ $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
 $files = dolphin
 $editor = emacsclient -c -n -a 'emacs'
+$editor-term = $term -e emacsclient -t -a 'emacs -nw'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = zen
 $help_keybind = ~/.config/hypr/scripts/show_keybind
@@ -259,6 +260,7 @@ bind = $mainMod CTRL, Return, exec, [float; size 50% 60%] $term2
 
 bind = $mainMod, E, exec, $files
 bind = $mainMod SHIFT, E, exec, $editor
+bind = $mainMod CTRL, E, exec, $editor-term
 bind = $mainMod SHIFT, I, exec, $editor-everywhere
 bind = $mainMod SHIFT, W, exec, $browser
 bind = $mainMod, ccedilla, exec, $termapp k9s
