[ADD] keybinds for movetoworkspacesilent

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -383,6 +383,15 @@ bind = $mainMod SHIFT, minus, movetoworkspace, 6
 bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 
+bind = $mainMod CTRL, ampersand, movetoworkspacesilent, 1
+bind = $mainMod CTRL, eacute, movetoworkspacesilent, 2
+bind = $mainMod CTRL, quotedbl, movetoworkspacesilent, 3
+bind = $mainMod CTRL, apostrophe, movetoworkspacesilent, 4
+bind = $mainMod CTRL, parenleft, movetoworkspacesilent, 5
+bind = $mainMod CTRL, minus, movetoworkspacesilent, 6
+bind = $mainMod CTRL, egrave, movetoworkspacesilent, 7
+bind = $mainMod CTRL, underscore, movetoworkspacesilent, 8
+
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
