--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -299,7 +299,7 @@ bind = $mainMod CTRL, S, exec, ~/.config/hypr/scripts/screen-capture.sh
 
 bind = $mainMod SHIFT, T, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
-bind = $mainMod ALT, SPACE, exec, pkill -SIGUSR1 waybar
+bind = $mainMod SHIFT, W, exec, pkill -SIGUSR1 waybar
 
 bind = $mainMod, Q, killactive,
 bind = CTRL ALT, Delete, exit,
