[UP] now only exec emacs --daemon

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -4,6 +4,6 @@
 
 exec-once=swaync
 exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
-exec-once=start_emacs
+exec-once=emacs --daemon
 exec-once=communication_app_start
 exec-once=zen-browser
