--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -26,6 +26,7 @@ input-field {
     fade_on_empty = false
     font_family = CaskaydiaMono Nerd Font
     placeholder_text = <i><span foreground="##ffffff99">Hi, $USER. Enter Password 󰈷</span></i>
+    fail_text = <i>$PAMFAIL ($ATTEMPTS)</i>
     hide_input = false
     position = 0, -290
     halign = center
