--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,8 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
+cursor_trail 1
+
 font_size 12.0
 
 include ~/.cache/wal/colors-kitty.conf
