[ADD] screenshot script to wrap hyprshot with satty

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -315,6 +315,7 @@ bind = $mainMod, G, togglegroup
 bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/compactmode.sh
 bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
 bind = $mainMod ALT, apostrophe, exec, hyprctl keyword general:layout "$(hyprctl getoption general:layout | grep -q 'dwindle' && echo 'master' || echo 'dwindle')" #! @description: "Toggle between dwindle and master layout"; @windows;
+$screenshot = ~/.config/hypr/scripts/screenshot
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
