[ADD] rule for wiremix window

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -178,6 +178,7 @@ misc {
 # Float Necessary Windows
 windowrule = float,class:^waypaper$
 windowrule = float,class:^org.pulseaudio.pavucontrol$
+windowrule = float,class:^Wiremix$
 windowrule = float,class:^foot-float$
 windowrule = float,class:^nm-connection-editor$
 windowrule = float,class:^Gimp$
@@ -187,6 +188,7 @@ windowrule = float,class:^blueberry.py$
 windowrule = float,class:^(xdg-desktop-portal-gtk|org.freedesktop.impl.portal.desktop.kde)$
 windowrule = center, class:^(org.freedesktop.impl.portal.desktop.kde)$
 windowrule = size 1280 720,class:^(org.freedesktop.impl.portal.desktop.kde)$
+windowrule = size 700 500 class:^(org.pulseaudio.pavucontrol|Wiremix)$
 
 windowrule = float,class:^org.kde.gwenview$
 windowrule = size 65% 65%,class:^org.kde.gwenview$
