--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,9 +1,27 @@
 # monitor = eDP-1, 1920x1080@60, 0x0,1
-monitor = eDP-1, 2880x1800@60, 0x0,1.5
-workspace = 1, monitor:eDP-1
+  monitorv2 {
+    output = eDP-1
+    mode = 2880x1800@60
+    position = 0x0
+    scale = 1.5
+}
+  workspace = 1, monitor:eDP-1
 
-monitor = desc:AOC Q3279WG5B 0x0000652C, preferred, 1920x0, 1
-monitor = desc:AOC U32E2WG6 QELM5JA000186, 3840x2160@60, 1920x0, 1.5, bitdepth, 10, cm, hdr, sdrbrightness, 1.2, sdrsaturation, 0.98
+monitorv2 {
+  output = desc:AOC Q3279WG5B 0x0000652C
+  mode = preferred
+  position = auto-right
+  scale = 1
+}
+monitorv2 {
+  output = desc:AOC U32E2WG6 QELM5JA000186
+  mode = 3840x2160@60
+  position = auto-right
+  scale = 1.5
+  cm = hdr
+  sdrbrightness = 1.2
+  sdrsaturation = 0.98
+}
 monitor = desc:AOC Q3279WG5B 0x000067FB, 2560x1440@60, 1920x0, 1
 monitor = desc:LG Electronics LG TV SSCR2 0x01010101, preferred, 1920x0, 1.5
 
@@ -75,6 +93,9 @@ general {
     allow_tearing = false
     snap {
         enabled = true
+        window_gap = 5
+        border_overlap = false
+        respect_gaps = true
     }
     resize_on_border = true
 }
@@ -122,44 +143,50 @@ decoration {
 
 render {
     cm_enabled = true # default value
+    cm_auto_hdr = 2
 }
 
 animations {
-    enabled = true
-    bezier = linear, 0, 0, 1, 1
-    bezier = md3_standard, 0.2, 0, 0, 1
-    bezier = md3_decel, 0.05, 0.7, 0.1, 1
-    bezier = md3_accel, 0.3, 0, 0.8, 0.15
-    bezier = overshot, 0.05, 0.9, 0.1, 1.1
-    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
-    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
-    bezier = menu_decel, 0.1, 1, 0, 1
-    bezier = menu_accel, 0.38, 0.04, 1, 0.07
-    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
-    bezier = easeOutCirc, 0, 0.55, 0.45, 1
-    bezier = easeOutExpo, 0.16, 1, 0.3, 1
-    bezier = softAcDecel, 0.26, 0.26, 0.15, 1
-    bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
+  enabled = true
+  bezier = linear, 0, 0, 1, 1
+  bezier = md3_standard, 0.2, 0, 0, 1
+  bezier = md3_decel, 0.05, 0.7, 0.1, 1
+  bezier = md3_accel, 0.3, 0, 0.8, 0.15
+  bezier = overshot, 0.05, 0.9, 0.1, 1.1
+  bezier = crazyshot, 0.1, 1.5, 0.76, 0.92
+  bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+  bezier = menu_decel, 0.1, 1, 0, 1
+  bezier = menu_accel, 0.38, 0.04, 1, 0.07
+  bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+  bezier = easeOutCirc, 0, 0.55, 0.45, 1
+  bezier = easeOutExpo, 0.16, 1, 0.3, 1
+  bezier = softAcDecel, 0.26, 0.26, 0.15, 1
+  bezier = md2, 0.4, 0, 0.2, 1 # use with .2s duration
 
-    animation = windows, 1, 3, softAcDecel
-    animation = windowsIn, 1, 3, md3_decel, popin 0%
-    animation = windowsOut, 1, 3, md3_accel, popin 0%
-    animation = border, 1, 10, default
-    animation = fade, 1, 3, md3_decel
-    animation = layersIn, 1, 3, md2, popin
-    animation = layersOut, 1, 3, md2, popin
-    animation = workspaces, 1, 2, md3_standard, slide
-    animation = specialWorkspace, 1, 3, md3_decel, slidevert
+  animation = windows, 1, 3, softAcDecel
+  animation = windowsIn, 1, 3, md3_decel, popin 0%
+  animation = windowsOut, 1, 3, md3_accel, popin 0%
+  animation = border, 1, 10, default
+  animation = fade, 1, 3, md3_decel
+  animation = layersIn, 1, 3, md2, popin
+  animation = layersOut, 1, 3, md2, popin
+  animation = workspaces, 1, 2, md3_standard, slide
+  animation = specialWorkspace, 1, 3, md3_decel, slidevert
+  animation = zoomFactor,1, 10, crazyshot
 }
 
 dwindle {
     pseudotile = true
     preserve_split = true
     smart_split = false
+    precise_mouse_move = true
 }
 
 master {
     new_on_top = false
+    orientation = left
+    center_master_fallback = left
+    always_keep_position = false
 }
 
 gestures {
@@ -173,6 +200,10 @@ misc {
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
   vfr = false
+}
+
+render {
+  new_render_scheduling = true
 }
 
 # Float Necessary Windows
