[UP] simplify exec.conf

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -1,9 +1,5 @@
-
-# exec-once=~/.config/hypr/scripts/gtkthemes-bkp
-# exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
-
 exec-once=swaync
-exec-once=discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec-once=emacs --daemon
-exec-once=communication_app_start
-exec-once=zen-browser
+exec-once=uwsm app -- discord --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec-once=uwsm app -- slack --enable-features=UseOzonePlatform --ozone-platform=wayland
+exec-once=uwsm app -- zen-browser
