[ADD] hyprsunset init call

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,6 +36,8 @@ exec-once = ~/.config/hypr/scripts/desktop-portals.sh
 
 exec-once = hyprpaper
 
+exec-once = hyprsunset
+
 exec = ~/.config/hypr/scripts/notifications
 
 exec-once = ~/.config/hypr/scripts/status_bar
