[ADD] layer rule for walker

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -263,6 +263,7 @@ windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
 layerrule = noanim, selection
 layerrule = noanim, hyprpicker
 layerrule = dimaround, rofi
+layerrule = dimaround, walker
 layerrule = animation slide, swaync-control-center
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
