--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -269,9 +269,9 @@ layerrule = animation slide, swaync-control-center
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-$term = ghostty --gtk-single-instance=true
+$term = uwsm app -- kitty
+$term2 = uwsm app -- ghostty --gtk-single-instance=true
 $termapp = $term -e
-$term2 = kitty
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu = ~/.config/rofi/appmenu.sh
@@ -285,11 +285,11 @@ $sleep = ~/.config/hypr/scripts/sleep
 $suspend = ~/.config/hypr/scripts/suspend
 $wlogout = ~/.config/hypr/scripts/wlogout
 $colorpicker = ~/.config/hypr/scripts/colorpicker
-$files = dolphin
-$editor = emacsclient -c -n -a 'emacs'
+$files = uwsm app -- dolphin
+$editor = uwsm app -- emacsclient -c -n -a 'emacs'
 $editor-term = $term -e emacsclient -t -a 'emacs -nw'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
-$browser = zen
+$browser = uwsm app -- zen-browser
 $help_keybind = ~/.config/hypr/scripts/show_keybind
 $screenshot = ~/.config/hypr/scripts/screenshot
 
