--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -150,6 +150,7 @@ render {
 
 animations {
   enabled = true
+
   #        NAME,         X0,   Y0,   X1,   Y1
   bezier = linear,        0,    0,    1,    1
   bezier = md3_standard,  0.2,  0,    0,    1
@@ -339,7 +340,7 @@ bindd = $mainMod CTRL, S, Start Capture, exec, ~/.config/hypr/scripts/screen-cap
 
 bindd = $mainMod SHIFT, T, Image to Text, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
-bindd = $mainMod SHIFT, W, Toggle Waybar, exec, pkill -SIGUSR1 waybar
+bindd = $mainMod CTRL, W, Toggle Waybar, exec, pkill -SIGUSR1 waybar
 
 bindd = $mainMod, Q, Kill Active, killactive,
 bindd = $mainMod, F, Fullscreen, fullscreen, 2
