--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -444,8 +444,8 @@ bindd = $mainMod, agrave, Zoom reset, exec, hyprctl -q keyword cursor:zoom_facto
 
 bindd = $mainMod, N, Open Notifications, exec, $notificationmenu
 
-env = GDK_BACKEND,wayland
-env = QT_QPA_PLATFORM,wayland
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
