[UP] explicit hyprshot region

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -332,7 +332,7 @@ bindld = , XF86AudioPlay, Pause Media, exec, playerctl play-pause
 bindld = , XF86AudioPrev, Previous Track, exec, playerctl previous
 bindld = , XF86AudioStop, Stop Track, exec, playerctl stop
 
-bindd = , PRINT, Screenshot a Region, exec, $screenshot
+bindd = , PRINT, Screenshot a Region, exec, $screenshot region
 bindd = SHIFT, PRINT, Screenshot a Window, exec, $screenshot window
 bindd = CTRL, PRINT, Screenshot a Desktop, exec, $screenshot output
 
