--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -195,10 +195,9 @@ master {
 }
 
 gestures {
-    workspace_swipe = yes
-    workspace_swipe_fingers = 3
     workspace_swipe_create_new = true
-}
+    gesture = 3, horizontal, workspace
+ }
 
 misc {
   disable_hyprland_logo = true
