[UP] inhibit idle on fullscreen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -262,6 +262,7 @@ windowrule = workspace 1,class:^()$
 # All
 windowrule = opaque 1,class:^(.*)$
 windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
+windowrule = idleinhibit fullscreen, class:.*
 
 layerrule = noanim, selection
 layerrule = noanim, hyprpicker
