[UP] hypr config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -121,8 +121,8 @@ group {
 }
 
 decoration {
-    active_opacity = 0.90
-    inactive_opacity = 0.90
+    active_opacity = 0.95
+    inactive_opacity = 0.95
     rounding = 0         # original 10
     # rounding_power = 2.0  # original 2.0
     blur {
@@ -232,6 +232,10 @@ windowrule = float,class:^kitty$ title:^(float-.*)$
 windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
 
 windowrule = workspace 4,class:^Pop$
+
+
+# No Screen share windows
+windowrule = noscreenshare, class:^(Bitwarden)$
 
 # Gnome Settings
 windowrule = float,class:^(org.gnome.Settings)$
@@ -449,14 +453,15 @@ bindd = $mainMod, N, Open Notifications, exec, $notificationmenu
 
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
 env = QT_STYLE_OVERRIDE,kvantum
 env = SDL_VIDEODRIVER,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = OZONE_PLATFORM,wayland
+env = XDG_SESSION_TYPE,wayland
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
