[UP] extract command to script

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -345,7 +345,7 @@ bindd = CTRL, PRINT, Screenshot a Desktop, exec, $screenshot output
 
 bindd = $mainMod CTRL, S, Start Capture, exec, ~/.config/hypr/scripts/screen-capture.sh
 
-bindd = $mainMod SHIFT, T, Image to Text, exec, grim -g "$(slurp -d -c D1E5F4BB -b 1B232866 -s 00000000)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
+bindd = $mainMod SHIFT, T, Image to Text, exec, ~/.config/hypr/scripts/image-to-text.sh
 
 bindd = $mainMod CTRL, W, Toggle Waybar, exec, pkill -SIGUSR1 waybar
 
