[UP] walker config

--- a/.config/hypr/exec.conf
+++ b/.config/hypr/exec.conf
@@ -3,3 +3,6 @@ exec-once=emacs --daemon
 exec-once=uwsm app -- discord --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec-once=uwsm app -- slack --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec-once=uwsm app -- zen-browser
+
+exec-once = uwsm app -- elephant
+exec-once = uwsm app -- walker --gapplication-service
