--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -282,7 +282,8 @@ $term2 = uwsm app -- ghostty --gtk-single-instance=true
 $termapp = $term -e
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
-$appmenu = ~/.config/rofi/appmenu.sh
+$appmenu2 = ~/.config/rofi/appmenu.sh
+$appmenu = walker
 $clipboardlist = ~/.config/rofi/clipboardlist.sh
 $powermenu = ~/.config/hypr/scripts/powermenu
 $volume = ~/.config/hypr/scripts/volume
@@ -314,6 +315,7 @@ bindd = $mainMod, ccedilla, Launch K9s, exec, $termapp k9s
 bindd = $mainMod, m, Launch Btop, exec, $termapp btop
 
 bindd = $mainMod, D, Launch AppMenu, exec, $appmenu
+bindd = $mainMod SHIFT, D, Launch AppMenu, exec, $appmenu2
 bindd = $mainMod, X, Launch PowerMenu, exec, $powermenu
 bindd = $mainMod, W, Launch WallpaperMenu, exec, $wallpapermenu
 bindd = $mainMod, T, Launch ThemeMenu, exec, $thememenu
