--- a/.config/walker/config.toml
+++ b/.config/walker/config.toml
@@ -1,264 +1,138 @@
-app_launch_prefix = "uwsm app -- "
-terminal_title_flag = ""
-locale = ""
 close_when_open = true
-theme = "default"
-monitor = ""
-hotreload_theme = false
-as_window = false
-timeout = 0
-disable_click_to_close = false
+hotreload_theme = true
 force_keyboard_focus = true
+click_to_close = true                                                       # closes walker if clicking outside of the main content area
+theme = "default"
+theme_location = ["~/.config/walker/themes/"]
 
-[keys]
-accept_typeahead = ["tab"]
-trigger_labels = "lalt"
+[shell]
+anchor_top = true
+anchor_bottom = true
+anchor_left = true
+anchor_right = true
+
+[placeholders]
+"default" = { input = " Search...", list = "No Results" } # placeholders for input and empty list, key is the providers name, so f.e. "desktopapplications" or "menus:other"
+
+[keybinds]
+close = ["Escape"]
 next = ["ctrl j"]
-prev = ["ctrl k"]
-close = ["esc"]
-remove_from_history = ["shift backspace"]
-resume_query = ["ctrl r"]
-toggle_exact_search = ["ctrl m"]
+previous = ["ctrl k"]
+toggle_exact = ["ctrl e"]
+resume_last_query = ["ctrl r"]
+quick_activate = []
+additional_theme_location = "~/.config/walker/themes/"
 
-[keys.activation_modifiers]
-keep_open = "shift"
-alternate = "alt"
+[providers]
+default = [
+  "desktopapplications",
+  "menus",
+  "websearch",
+] # providers to be queried by default
+empty = ["desktopapplications"] # providers to be queried when query is empty
 
-[keys.ai]
-clear_session = ["ctrl x"]
-copy_last_response = ["ctrl c"]
-resume_session = ["ctrl r"]
-run_last_response = ["ctrl e"]
+[[providers.prefixes]]
+prefix = ";"
+provider = "providerlist"
 
-[events]
-on_activate = ""
-on_selection = ""
-on_exit = ""
-on_launch = ""
-on_query_change = ""
-
-[list]
-dynamic_sub = true
-keyboard_scroll_style = "emacs"
-max_entries = 50
-show_initial_entries = true
-single_click = true
-visibility_threshold = 20
-placeholder = "No Results"
-
-[search]
-argument_delimiter = "#"
-placeholder = "Search..."
-delay = 0
-resume_last_query = false
-
-[activation_mode]
-labels = "jkl;asdf"
-
-[builtins.hyprland_keybinds]
-show_sub_when_single = true
-path = "~/.config/hypr/hyprland.conf"
-weight = 5
-name = "hyprland_keybinds"
-placeholder = "Hyprland Keybinds"
-switcher_only = true
-hidden = true
-
-[builtins.applications]
-weight = 5
-name = "applications"
-placeholder = " Search..."
-prioritize_new = false
-hide_actions_with_empty_query = true
-context_aware = false
-refresh = true
-show_sub_when_single = false
-show_icon_when_single = true
-show_generic = true
-history = false
-icon = ""
-hidden = true
-
-[builtins.applications.actions]
-enabled = true
-hide_category = false
-hide_without_query = true
-
-[builtins.bookmarks]
-weight = 5
-placeholder = "Bookmarks"
-name = "bookmarks"
-icon = "bookmark"
-switcher_only = true
-
-[[builtins.bookmarks.entries]]
-label = "Walker"
-url = "https://github.com/abenz1267/walker"
-keywords = ["walker", "github"]
-
-[builtins.xdph_picker]
-hidden = true
-weight = 5
-placeholder = "Screen/Window Picker"
-show_sub_when_single = true
-name = "xdphpicker"
-switcher_only = true
-
-[builtins.ai]
-weight = 5
-placeholder = "AI"
-name = "ai"
-icon = "help-browser"
-switcher_only = true
-show_sub_when_single = true
-
-[[builtins.ai.anthropic.prompts]]
-model = "claude-3-7-sonnet-20250219"
-temperature = 1
-max_tokens = 1_000
-label = "General Assistant"
-prompt = "You are a helpful general assistant. Keep your answers short and precise."
-
-[builtins.calc]
-require_number = true
-weight = 5
-name = "calc"
-icon = "accessories-calculator"
-placeholder = "Calculator"
-min_chars = 4
-
-[builtins.windows]
-weight = 5
-icon = "view-restore"
-name = "windows"
-placeholder = "Windows"
-show_icon_when_single = true
-
-[builtins.clipboard]
-always_put_new_on_top = true
-exec = "wl-copy"
-weight = 5
-name = "clipboard"
-avoid_line_breaks = true
-placeholder = "Clipboard"
-image_height = 300
-max_entries = 10
-switcher_only = true
-
-[builtins.commands]
-weight = 5
-icon = "utilities-terminal"
-switcher_only = true
-name = "commands"
-placeholder = "Commands"
-
-[builtins.custom_commands]
-weight = 5
-icon = "utilities-terminal"
-name = "custom_commands"
-placeholder = "Custom Commands"
-
-[builtins.emojis]
-exec = "wl-copy"
-weight = 5
-name = "emojis"
-placeholder = "Emojis"
-switcher_only = true
-history = true
-typeahead = true
-show_unqualified = false
-prefix = "."
-
-[builtins.symbols]
-after_copy = ""
-weight = 5
-name = "symbols"
-placeholder = "Symbols"
-switcher_only = true
-history = true
-typeahead = true
-
-[builtins.finder]
-use_fd = true
-fd_flags = "--ignore-vcs --type file --type directory"
-cmd_alt = "xdg-open $(dirname ~/%RESULT%)"
-weight = 5
-icon = "file"
-name = "finder"
-placeholder = "Finder"
-switcher_only = true
-ignore_gitignore = true
-refresh = true
-concurrency = 8
-show_icon_when_single = true
-preview_images = false
-
-[builtins.runner]
-eager_loading = true
-weight = 5
-icon = "utilities-terminal"
-name = "runner"
-placeholder = "Runner"
-typeahead = true
-history = true
-generic_entry = false
-refresh = true
-use_fd = false
-
-[builtins.ssh]
-weight = 5
-icon = "preferences-system-network"
-name = "ssh"
-placeholder = "SSH"
-switcher_only = true
-history = true
-refresh = true
-
-[builtins.switcher]
-weight = 5
-name = "switcher"
-placeholder = "Switcher"
+[[providers.prefixes]]
 prefix = "/"
+provider = "files"
 
-[builtins.websearch]
-keep_selection = true
-weight = 5
-icon = "applications-internet"
-name = "websearch"
-placeholder = "Websearch"
+[[providers.prefixes]]
+prefix = ";"
+provider = "symbols"
 
-[[builtins.websearch.entries]]
-name = "Google"
-url = "https://www.google.com/search?q=%TERM%"
+[[providers.prefixes]]
+prefix = "="
+provider = "calc"
 
-[[builtins.websearch.entries]]
-name = "DuckDuckGo"
-url = "https://duckduckgo.com/?q=%TERM%"
-switcher_only = true
+[[providers.prefixes]]
+prefix = "@"
+provider = "websearch"
 
-[[builtins.websearch.entries]]
-name = "Ecosia"
-url = "https://www.ecosia.org/search?q=%TERM%"
-switcher_only = true
+[[providers.prefixes]]
+prefix = ":"
+provider = "clipboard"
 
-[[builtins.websearch.entries]]
-name = "Yandex"
-url = "https://yandex.com/search/?text=%TERM%"
-switcher_only = true
+[providers.actions]
+dmenu = [{ action = "select", default = true, bind = "Return" }]
 
-[builtins.dmenu]
-hidden = true
-weight = 5
-name = "dmenu"
-placeholder = "Dmenu"
-switcher_only = true
-show_icon_when_single = true
+providerlist = [
+  { action = "activate", default = true, bind = "Return", after = "ClearReload" },
+]
 
-[builtins.translation]
-delay = 1000
-weight = 5
-name = "translation"
-icon = "accessories-dictionary"
-placeholder = "Translation"
-switcher_only = true
-provider = "googlefree"
+bluetooth = [
+  { action = "find", global = true, bind = "ctrl f", after = "AsyncClearReload" },
+  { action = "trust", bind = "ctrl t", after = "AsyncReload" },
+  { action = "untrust", bind = "ctrl t", after = "AsyncReload" },
+  { action = "pair", bind = "Return", after = "AsyncReload" },
+  { action = "remove", bind = "ctrl d", after = "AsyncReload" },
+  { action = "connect", bind = "Return", after = "AsyncReload" },
+  { action = "disconnect", bind = "Return", after = "AsyncReload" },
+]
+
+archlinuxpkgs = [
+  { action = "install", bind = "Return", default = true },
+  { action = "remove", bind = "Return" },
+]
+
+calc = [
+  { action = "copy", default = true, bind = "Return" },
+  { action = "delete", bind = "ctrl d", after = "AsyncReload" },
+  { action = "save", bind = "ctrl s", after = "AsyncClearReload" },
+]
+
+websearch = [
+  { action = "search", default = true, bind = "Return" },
+  { action = "erase_history", label = "clear hist", bind = "ctrl h", after = "Reload" },
+]
+
+desktopapplications = [
+  { action = "start", default = true, bind = "Return" },
+  { action = "erase_history", label = "clear hist", bind = "ctrl h", after = "AsyncReload" },
+  { action = "pin", bind = "ctrl p", after = "AsyncReload" },
+  { action = "unpin", bind = "ctrl p", after = "AsyncReload" },
+  { action = "pinup", bind = "ctrl n", after = "AsyncReload" },
+  { action = "pindown", bind = "ctrl m", after = "AsyncReload" },
+]
+
+files = [
+  { action = "open", default = true, bind = "Return" },
+  { action = "opendir", label = "open dir", bind = "ctrl Return" },
+  { action = "copypath", label = "copy path", bind = "ctrl shift c" },
+  { action = "copyfile", label = "copy file", bind = "ctrl c" },
+]
+
+todo = [
+  { action = "save", default = true, bind = "Return", after = "ClearReload" },
+  { action = "delete", bind = "ctrl d", after = "ClearReload" },
+  { action = "active", bind = "Return", after = "ClearReload" },
+  { action = "inactive", bind = "Return", after = "ClearReload" },
+  { action = "done", bind = "ctrl f", after = "ClearReload" },
+  { action = "clear", bind = "ctrl x", after = "ClearReload", global = true },
+]
+
+runner = [
+  { action = "run", default = true, bind = "Return" },
+  { action = "runterminal", label = "run in terminal", bind = "shift Return" },
+  { action = "erase_history", label = "clear hist", bind = "ctrl h", after = "Reload" },
+]
+
+symbols = [
+  { action = "run_cmd", label = "select", default = true, bind = "Return" },
+  { action = "erase_history", label = "clear hist", bind = "ctrl h", after = "Reload" },
+]
+
+unicode = [
+  { action = "run_cmd", label = "select", default = true, bind = "Return" },
+  { action = "erase_history", label = "clear hist", bind = "ctrl h", after = "Reload" },
+]
+
+clipboard = [
+  { action = "copy", default = true, bind = "Return" },
+  { action = "remove", bind = "ctrl d", after = "ClearReload" },
+  { action = "remove_all", global = true, label = "clear", bind = "ctrl shift d", after = "ClearReload" },
+  { action = "toggle_images", global = true, label = "toggle images", bind = "ctrl i", after = "ClearReload" },
+  { action = "edit", bind = "ctrl o" },
+]
