[UP] screen record script + menu
thx omarchy

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -263,6 +263,13 @@ windowrule = move onscreen 100%-w-20,class:^(emacs)$,title:^(Ediff)$
 windowrule = workspace 1,class:^(.*Microsoft Teams.*|teams-for-linux|discord|WebCord|Slack)$
 windowrule = workspace 1,class:^()$
 
+# Webcam overlay for screen recording
+windowrule = float, title:WebcamOverlay
+windowrule = pin, title:WebcamOverlay
+windowrule = noinitialfocus, title:WebcamOverlay
+windowrule = nodim, title:WebcamOverlay
+windowrule = move 100%-w-70 100%-w-45, title:WebcamOverlay # There's a typo in the hyprland rule so 100%-w on the height param is actually correct here
+
 # All
 windowrule = opaque 1,class:^(.*)$
 windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
@@ -273,6 +280,7 @@ layerrule = noanim, hyprpicker
 layerrule = dimaround, rofi
 layerrule = dimaround, walker
 layerrule = animation slide, swaync-control-center
+layerrule = blur, swaync-control-center
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -283,24 +291,26 @@ $termapp = $term -e
 $wallpapermenu = ~/.config/rofi/wallpaper.sh
 $thememenu = ~/.config/rofi/theme.sh
 $appmenu2 = ~/.config/rofi/appmenu.sh
-$appmenu = walker
+$appmenu = ~/.config/hypr/scripts/walker-menu.sh
 $clipboardlist = ~/.config/rofi/clipboardlist.sh
-$powermenu = ~/.config/hypr/scripts/powermenu
-$volume = ~/.config/hypr/scripts/volume
+$powermenu = ~/.config/hypr/scripts/powermenu.sh
+$volume = ~/.config/hypr/scripts/volume.sh
 $notificationmenu = swaync-client -t
-$brightness = ~/.config/hypr/scripts/brightness
+$brightness = ~/.config/hypr/scripts/brightness.sh
 $lockscreen = hyprlock
-$sleep = ~/.config/hypr/scripts/sleep
-$suspend = ~/.config/hypr/scripts/suspend
-$wlogout = ~/.config/hypr/scripts/wlogout
-$colorpicker = ~/.config/hypr/scripts/colorpicker
+$sleep = ~/.config/hypr/scripts/sleep.sh
+$suspend = ~/.config/hypr/scripts/suspend.sh
+$wlogout = ~/.config/hypr/scripts/wlogout.sh
+$colorpicker = ~/.config/hypr/scripts/colorpicker.sh
 $files = uwsm-app -- dolphin
 $editor = uwsm-app -- emacsclient -c -n -a 'emacs'
 $editor-term = $term -e emacsclient -t -a 'emacs -nw'
 $editor-everywhere = emacsclient --eval "(emacs-everywhere)"
 $browser = uwsm-app -- zen-browser
-$help_keybind = ~/.config/hypr/scripts/show_keybind
-$screenshot = ~/.config/hypr/scripts/screenshot
+$help_keybind = ~/.config/hypr/scripts/show_keybind.sh
+$screenshot = ~/.config/hypr/scripts/screenshot.sh
+$screenrecord = ~/.config/hypr/scripts/screenrecord.sh
+$screenrecord-menu = ~/.config/hypr/scripts/screenrecord-menu.sh
 
 bindd = $mainMod, Return, Launch Terminal, exec, $term
 bindd = $mainMod SHIFT, Return, Launch Second Terminal, exec, $term2
@@ -341,11 +351,9 @@ bindld = , XF86AudioPlay, Pause Media, exec, playerctl play-pause
 bindld = , XF86AudioPrev, Previous Track, exec, playerctl previous
 bindld = , XF86AudioStop, Stop Track, exec, playerctl stop
 
-bindd = , PRINT, Screenshot a Region, exec, $screenshot region
-bindd = SHIFT, PRINT, Screenshot a Window, exec, $screenshot window
-bindd = CTRL, PRINT, Screenshot a Desktop, exec, $screenshot output
+bindd = , PRINT, Screenshot, exec, $screenshot smart
 
-bindd = $mainMod CTRL, S, Start Capture, exec, ~/.config/hypr/scripts/screen-capture.sh
+bindd = $mainMod CTRL, S, Start Capture, exec, $screenrecord-menu
 
 bindd = $mainMod SHIFT, T, Image to Text, exec, ~/.config/hypr/scripts/image-to-text.sh
 
@@ -361,6 +369,7 @@ bindd = $mainMod, P, Pseudo Window, pseudo, # dwindle
 bindd = $mainMod, O, Toggle Opacity, exec, hyprctl dispatch setprop active opaque toggle
 bindd = $mainMod CTRL, SPACE, Pin Window, pin
 bindd = $mainMod, G, Toggle Group, togglegroup
+bindd = SUPER ALT, G, Move active window out of group, moveoutofgroup
 bindd = $mainMod SHIFT, C, Enable CompactMode, exec, ~/.config/hypr/scripts/compactmode.sh
 bindd = $mainMod, F1, Enable GameMode, exec, ~/.config/hypr/scripts/gamemode.sh
 bindd = $mainMod ALT, apostrophe, Switch Layout, exec, hyprctl keyword general:layout "$(hyprctl getoption general:layout | grep -q 'dwindle' && echo 'master' || echo 'dwindle')" #! @description: "Toggle between dwindle and master layout"; @windows;
