[UP] hypr config cleanup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,7 +40,7 @@ exec-once = hyprsunset
 
 exec = ~/.config/hypr/scripts/notifications
 
-exec-once = ~/.config/hypr/scripts/status_bar
+exec-once = ~/.config/hypr/scripts/status_bar.sh
 
 source = ~/.config/hypr/exec.conf
 
@@ -231,7 +231,6 @@ windowrule = size 65% 65%,class:^org.kde.gwenview$
 windowrule = float,class:^kitty$ title:^(float-.*)$
 windowrule = size 50% 50%,class:^kitty$ title:^(float-.*)$
 
-windowrule = workspace 4,class:^Pop$
 
 
 # No Screen share windows
