[UP] disable anim for wayfreeze anim

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -275,6 +275,7 @@ windowrule = opaque 0,class:^(kitty|Alacritty|com.mitchellh.ghostty)$
 windowrule = idleinhibit fullscreen, class:.*
 
 layerrule = noanim, selection
+layerrule = noanim, wayfreeze
 layerrule = noanim, hyprpicker
 layerrule = dimaround, rofi
 layerrule = dimaround, walker
