[UP] hypridle use new script name

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -14,7 +14,7 @@ listener {
 }
 
 listener {
-    timeout = 300                            # 5 minutes
-    on-timeout = ~/.config/hypr/scripts/sleep # command to run when timeout has passed
-    on-resume = notify-send "Welcome back!"  # command to run when activity is detected after timeout has fired.
+    timeout = 300                                # 5 minutes
+    on-timeout = ~/.config/hypr/scripts/sleep.sh # command to run when timeout has passed
+    on-resume = notify-send "Welcome back!"      # command to run when activity is detected after timeout has fired.
 }
